--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
@@ -22,7 +23,7 @@ flutter:
     - assets/fonts/
     - assets/images/
     - assets/vectors/
-  
+
   fonts:
     - family: Satoshi
       fonts:
@@ -36,4 +37,3 @@ flutter:
           weight: 400
         - asset: assets/fonts/Satoshi-Regular.ttf
           weight: 300
-          
